AWS_CF_TASK.yaml.yml
AWSTemplateFormatVersion: 2010-09-09

Description: This template creates a VPC with One public and private subnet along with openVPN Server in public and linux server in private subnets

Parameters:
  KeyName:
    Description: Name of an existing key pair to ssh EC2
    Type: AWS::EC2::KeyPair::KeyName
    Default: 'Server_Key'
    ConstraintDescription: Must be the name of existing key pair

  VPCCIDR:
    Default: 10.0.0.0/23
    Description: Please enter the IP range for VPC in CIDR notation
    Type: String

  PublicSubnetCIDR:
    Default: 10.0.0.0/24
    Description: Please enter the IP range for public subnet in CIDR notation
    Type: String

  PrivateSubnetCIDR:
    Default: 10.0.1.0/24
    Description: Please enter the IP range for private subnet in CIDR notation
    Type: String

  SSHLocation:
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: This must be a valid IP CIDR range of the form x.x.x.x/x.
    Default: 0.0.0.0/0
    Description: The IP address range that is used to SSH the server
    MaxLength: '18'
    MinLength: '9'
    Type: String

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: CF-VPC

  MyInternetGateway: 
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: CF-IGW

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "ap-south-1a"
      CidrBlock: !Ref PublicSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: CF-PublicSubnet
      VpcId: !Ref VPC

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "ap-south-1b"
      CidrBlock: !Ref PrivateSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: CF-PrivateSubnet
      VpcId: !Ref VPC

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref MyInternetGateway
      VpcId: !Ref VPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags:
        - Key: Name
          Value: CF-Public Route Table
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  OpenServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Enabels ports 945,443,1194,943 & 22 for OpenVpn
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 945
          ToPort: 945
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 1194
          ToPort: 1194
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 943
          ToPort: 943
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: CF-OpenServerSecurityGroup
      VpcId: !Ref VPC

  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH Security Group
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
      Tags:
        - Key: Name
          Value: CF-SSH Security Group
      VpcId: !Ref VPC

  ICMPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ICMP Security Group
      SecurityGroupIngress: 
        - IpProtocol: icmp
          FromPort: 8
          ToPort: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: CF-ICMP Security Group
      VpcId: !Ref VPC

  OpenVPNInstance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: "ap-south-1a"
      ImageId: 'ami-01614d815cf856337'
      InstanceType: t2.micro
      KeyName: !Ref "KeyName" 
      SubnetId: !Ref PublicSubnet    
      SecurityGroupIds:
        - !Ref SSHSecurityGroup
        - !Ref OpenServerSecurityGroup

  PrivateInstance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: "ap-south-1b"
      ImageId: 'ami-03bb6d83c60fc5f7c'
      InstanceType: t2.micro
      KeyName: !Ref "KeyName" 
      SubnetId: !Ref PrivateSubnet    
      SecurityGroupIds:
        - !Ref SSHSecurityGroup
        - !Ref ICMPSecurityGroup
